# django-cloudrun-iap

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
cloudrun_iap_auth/: apps.py  middlewares.py  mock.py  models.py
cloudrun_iap_auth/tests/: test_backends.py  test_middleware.py  test_settings.py
django_cloudrun_iap/: backends.py  middlewares.py  user.py
django_cloudrun_iap/tests/: test_backends.py  test_middleware.py  test_service_account.py  test_settings.py
