[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cloudrun-iap"
version = "0.2.6-beta"
authors = [
    { name = "Simon ANDRE", email = "simon.andre@emencia.com" },
]
description = "A Django middleware for Google Cloud RUN IAP authentication."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "django>=3.2",
    "google-auth>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/boot-sandre/django-cloudrun-iap"
"Bug Tracker" = "https://github.com/boot-sandre/django-cloudrun-iap/issues"

[tool.setuptools]
packages = ["cloudrun_iap_auth"]

